--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,12 @@ h6 {
     max-width: 200px;
 }
 
+button {
+    background-color: aliceblue;
+    border: none;
+    cursor: pointer;
+}
+
 .gallery {
     margin: auto;
     display: grid;
