--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,9 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 16px;
+}
 
 body {
     background-color: #4fa0c0;
@@ -21,7 +24,7 @@ h4,
 h5,
 h6 {
     font-family: 'spongebob';
-    color: aliceblue;
+    color: rgb(236, 221, 86);
     letter-spacing: 0.2rem;
 }
 
@@ -37,8 +40,12 @@ h6 {
 
 button {
     background-color: aliceblue;
+    height: 2rem;
+    min-width: 2rem;
     border: none;
     cursor: pointer;
+    font-size: 1.2rem;
+    margin: 2px;
 }
 
 .gallery {
