--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background-color: #4fa0c0;
+    background-color: #9fbcdf;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -24,7 +24,7 @@ h4,
 h5,
 h6 {
     font-family: 'spongebob';
-    color: rgb(236, 221, 86);
+    color: rgb(238, 219, 46);
     letter-spacing: 0.2rem;
 }
 
@@ -39,13 +39,26 @@ h6 {
 }
 
 button {
-    background-color: aliceblue;
-    height: 2rem;
-    min-width: 2rem;
     border: none;
     cursor: pointer;
+}
+
+.back-btn {
+    font-size: 2rem;
+    font-weight: 900;
+    background-color: inherit;
+}
+
+.editor-options button {
     font-size: 1.2rem;
+    height: 2rem;
+    min-width: 2.2rem;
     margin: 2px;
+    background-color: aliceblue;
+}
+
+body {
+    color: #ffffff9d;
 }
 
 .gallery {
@@ -60,6 +73,8 @@ button {
 .gallery img {
     height: 100%;
     width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 /* helpers */
