--- a/styles/style.css
+++ b/styles/style.css
@@ -12,8 +12,7 @@ html {
 }
 
 body {
-    background-color: #9fbcdf;
-    background-image: url('../img/bubbles.png');
+    background-color: #8bbfe2;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -34,16 +33,22 @@ h6 {
 
 a {
     text-decoration: none;
-    color: black;
 }
 
-button {
-    border: none;
-    cursor: pointer;
+
+.editor-container {
+    max-width: 600px;
+    margin: auto;
 }
 
 .editor {
     display: flex;
+    padding: 50px;
+    background-image: url('../img/bubbles.png');
+    background-color: #c3d8ddb2;
+    -webkit-box-shadow: inset 1px -4px 14px 5px #d3e8eee5;
+    box-shadow: inset 1px -4px 14px 5px #d3e8eee5;
+    border-radius: 30px;
     align-items: center;
     justify-content: center;
 }
@@ -52,23 +57,28 @@ button {
     max-width: 200px;
 }
 
-.editor-options button {
-    font-size: 1.2rem;
-    height: 2rem;
-    min-width: 2.2rem;
-    margin: 3px;
-    background-color: aliceblue;
-}
-
 .back-btn {
+    border: none;
+    cursor: pointer;
     font-size: 2rem;
     font-weight: 900;
     background-color: inherit;
+
 }
 
+
+#text-fill,
+#text-stroke {
+    height: 25px;
+    width: 25px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+
 .icon {
-    height: 30px;
-    width: 30px;
+    height: 32px;
+    width: 32px;
     cursor: pointer;
 }
 
@@ -85,7 +95,7 @@ button {
 .gallery img {
     height: 100%;
     width: 100%;
-    /* border-radius: 10px; */
+    border-radius: 5px;
     box-shadow: 0px 0px 12px 1px #244e81;
     cursor: pointer;
 }
@@ -114,7 +124,12 @@ button {
         width: 300px;
     }
 
+    .editor-container {
+        max-width: 340px;
+    }
+
     .editor {
         flex-direction: column;
+        padding: 10px;
     }
 }
