--- a/styles/style.css
+++ b/styles/style.css
@@ -170,10 +170,10 @@ a {
 
 
 .footer-container {
-    max-width: 900px;
+    max-width: 800px;
     margin: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 20px;
 }
@@ -182,11 +182,9 @@ a {
     height: 200px;
     width: 200px;
     border-radius: 50%;
-    /* margin-right: 30px; */
 }
 
 .about-paragraph {
-    max-width: 400px;
     font-family: 'sponge-handwrite';
     font-size: 1.5rem;
     text-align: start;
@@ -248,8 +246,8 @@ a {
         flex-direction: column;
     }
 
-    .about-paragraph {
+    .about-paragraph p {
         text-align: center;
-        margin-left: 0;
+        margin-block-start: 0;
     }
 }
